fixed visualization of page life_expectancy. both charts visible

--- a/style/style.css
+++ b/style/style.css
@@ -609,3 +609,11 @@ canvas {
     font-size: 20px;
     margin-bottom: 10px;
 }
+
+.chart-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto;
+    width: 100%;
+}
